[package]
name = "tree-fitting"
version = "0.1.0"
authors = ["Werner Kroneman <werner@wernerkroneman.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.13"
piston_window = "0.117.0"
superpixel = "0.1.1"
nalgebra = "0.24.1"
ndarray = "0.14.0"
ndarray-stats = "0.4.0"

[profile.dev]
opt-level = 2